--- a/index.html
+++ b/index.html
@@ -1,193 +1,331 @@
 ﻿<!DOCTYPE html>
-<html lang="en-us">
+<html lang="pt-br">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity Web Player | fly-simulator-pvp</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Fly Simulator PVP - Jogo de Simulação de Voo</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
-    <link rel="stylesheet" href="TemplateData/style.css">
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
+            color: #333;
+        }
+
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 0 20px;
+        }
+
+        /* Cabeçalho */
+        header {
+            background-color: #2c3e50;
+            color: white;
+            padding: 20px 0;
+            text-align: center;
+        }
+
+            header h1 {
+                font-size: 2.5em;
+                margin-bottom: 10px;
+            }
+
+            header p {
+                font-size: 1.2em;
+            }
+
+        /* Layout principal */
+        .main-content {
+            display: flex;
+            flex-wrap: wrap;
+            margin: 20px 0;
+        }
+
+        /* Área do jogo */
+        .game-area {
+            flex: 1 1 960px;
+            background-color: #fff;
+            border-radius: 8px;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+            padding: 10px;
+            margin: 10px;
+        }
+
+        /* Área de anúncios lateral */
+        .ad-sidebar {
+            flex: 0 1 300px;
+            margin: 10px;
+        }
+
+        .ad-container {
+            background-color: #eee;
+            border: 1px dashed #ccc;
+            border-radius: 8px;
+            height: 600px;
+            margin-bottom: 20px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            padding: 10px;
+        }
+
+        /* Anúncios horizontais */
+        .ad-horizontal {
+            background-color: #eee;
+            border: 1px dashed #ccc;
+            border-radius: 8px;
+            height: 100px;
+            margin: 20px 10px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+        }
+
+        /* Rodapé */
+        footer {
+            background-color: #2c3e50;
+            color: white;
+            padding: 20px 0;
+            text-align: center;
+        }
+
+            footer .links {
+                margin: 15px 0;
+            }
+
+                footer .links a {
+                    color: #3498db;
+                    margin: 0 10px;
+                    text-decoration: none;
+                }
+
+                    footer .links a:hover {
+                        text-decoration: underline;
+                    }
+
+        /* Estilos do Unity */
+        #unity-container {
+            width: 100%;
+        }
+
+        #unity-canvas {
+            width: 100%;
+            height: 600px;
+            background: #231F20;
+        }
+
+        #unity-loading-bar {
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+            display: none;
+        }
+
+        #unity-logo {
+            width: 154px;
+            height: 130px;
+            background: url('TemplateData/unity-logo-dark.png') no-repeat center;
+        }
+
+        #unity-progress-bar-empty {
+            width: 141px;
+            height: 18px;
+            margin-top: 10px;
+            background: url('TemplateData/progress-bar-empty-dark.png') no-repeat center;
+        }
+
+        #unity-progress-bar-full {
+            width: 0%;
+            height: 18px;
+            margin-top: 10px;
+            background: url('TemplateData/progress-bar-full-dark.png') no-repeat center;
+        }
+
+        #unity-footer {
+            position: relative;
+            margin-top: 5px;
+        }
+
+        #unity-fullscreen-button {
+            float: right;
+            width: 38px;
+            height: 38px;
+            background: url('TemplateData/fullscreen-button.png') no-repeat center;
+            cursor: pointer;
+        }
+
+        #unity-build-title {
+            float: left;
+            margin-right: 10px;
+            line-height: 38px;
+            font-family: arial;
+            font-size: 18px;
+        }
+
+        #unity-warning {
+            position: absolute;
+            left: 50%;
+            top: 5%;
+            transform: translate(-50%);
+            background: white;
+            padding: 10px;
+            display: none;
+        }
+
+        @media screen and (max-width: 960px) {
+            .main-content {
+                flex-direction: column;
+            }
+
+            .ad-sidebar {
+                flex: 1 1 auto;
+            }
+        }
+    </style>
 </head>
-<title>Fly Simulator PvP</title>
-<style>
-    body {
-        font-family: Arial, sans-serif;
-        text-align: center;
-        margin: 0;
-        padding: 0;
-        background-color: #f4f4f4;
-    }
-
-    header {
-        background: #333;
-        color: white;
-        padding: 20px;
-        font-size: 24px;
-    }
-
-    .container {
-        max-width: 900px;
-        margin: 20px auto;
-        background: white;
-        padding: 20px;
-        border-radius: 8px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    }
-
-    .game-container {
-        width: 100%;
-        height: 500px;
-        background: #000;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        color: white;
-    }
-
-    .ad-container {
-        margin: 20px 0;
-    }
-
-    footer {
-        margin-top: 20px;
-        padding: 10px;
-        background: #333;
-        color: white;
-    }
-</style>
-
 <body>
-    <div class="container">
-        <h2>Bem-vindo ao Fly Simulator PvP!</h2>
-        <p>Entre na batalha aérea e desafie outros jogadores neste jogo de combate emocionante!</p>
-
-        <!-- Anúncio Superior -->
-        <div class="ad-container">
-            <!-- Código do Google AdSense aqui -->
-            <p>(Espaço para anúncio)</p>
+    <!-- Cabeçalho -->
+    <header>
+        <div class="container">
+            <h1>Fly Simulator PVP</h1>
+            <p>Experimente o simulador de voo multijogador!</p>
         </div>
+    </header>
 
-        <div id="unity-container" class="unity-desktop">
-            <canvas id="unity-canvas" width=900 height=500 tabindex="-1"></canvas>
-            <div id="unity-loading-bar">
-                <div id="unity-logo"></div>
-                <div id="unity-progress-bar-empty">
-                    <div id="unity-progress-bar-full"></div>
+    <!-- Anúncio horizontal superior -->
+    <div class="container">
+        <div class="ad-horizontal">
+            <p>Espaço para anúncio (728x90)</p>
+        </div>
+    </div>
+
+    <!-- Conteúdo principal -->
+    <div class="container">
+        <div class="main-content">
+            <!-- Área do jogo -->
+            <div class="game-area">
+                <div id="unity-container" class="unity-desktop">
+                    <canvas id="unity-canvas" tabindex="-1"></canvas>
+                    <div id="unity-loading-bar">
+                        <div id="unity-logo"></div>
+                        <div id="unity-progress-bar-empty">
+                            <div id="unity-progress-bar-full"></div>
+                        </div>
+                    </div>
+                    <div id="unity-warning"></div>
+                    <div id="unity-footer">
+                        <div id="unity-fullscreen-button"></div>
+                        <div id="unity-build-title">Fly Simulator PVP</div>
+                    </div>
                 </div>
             </div>
-            <div id="unity-warning"> </div>
-            <div id="unity-footer">
-                <div id="unity-logo-title-footer"></div>
-                <div id="unity-fullscreen-button"></div>
-                <div id="unity-build-title">fly-simulator-pvp</div>
-            </div>
-            <!-- Anúncio Inferior -->
-            <div class="ad-container">
-                <!-- Código do Google AdSense aqui -->
-                <p>(Espaço para anúncio)</p>
+
+            <!-- Anúncio lateral -->
+            <div class="ad-sidebar">
+                <div class="ad-container">
+                    <p>Espaço para anúncio<br>(300x600)</p>
+                </div>
+                <div class="ad-container" style="height: 250px;">
+                    <p>Espaço para anúncio<br>(300x250)</p>
+                </div>
             </div>
         </div>
-        <footer>
-            <p>© 2025 Fly Simulator PvP | <a href="#">Contato</a> | <a href="#">Política de Privacidade</a></p>
-        </footer>
-        <script>
-            var canvas = document.querySelector("#unity-canvas");
+    </div>
 
-            // Shows a temporary message banner/ribbon for a few seconds, or
-            // a permanent error message on top of the canvas if type=='error'.
-            // If type=='warning', a yellow highlight color is used.
-            // Modify or remove this function to customize the visually presented
-            // way that non-critical warnings and error messages are presented to the
-            // user.
-            function unityShowBanner(msg, type) {
-                var warningBanner = document.querySelector("#unity-warning");
-                function updateBannerVisibility() {
-                    warningBanner.style.display = warningBanner.children.length ? 'block' : 'none';
-                }
-                var div = document.createElement('div');
-                div.innerHTML = msg;
-                warningBanner.appendChild(div);
-                if (type == 'error') div.style = 'background: red; padding: 10px;';
-                else {
-                    if (type == 'warning') div.style = 'background: yellow; padding: 10px;';
-                    setTimeout(function () {
-                        warningBanner.removeChild(div);
-                        updateBannerVisibility();
-                    }, 5000);
-                }
-                updateBannerVisibility();
+    <!-- Anúncio horizontal inferior -->
+    <div class="container">
+        <div class="ad-horizontal">
+            <p>Espaço para anúncio (728x90)</p>
+        </div>
+    </div>
+
+    <!-- Rodapé -->
+    <footer>
+        <div class="container">
+            <div class="links">
+                <a href="#">Sobre o jogo</a>
+                <a href="#">Termos de uso</a>
+                <a href="#">Política de privacidade</a>
+                <a href="#">Contato</a>
+            </div>
+            <p>&copy; 2025 Fly Simulator PVP. Todos os direitos reservados.</p>
+        </div>
+    </footer>
+
+    <script>
+        var canvas = document.querySelector("#unity-canvas");
+
+        function unityShowBanner(msg, type) {
+            var warningBanner = document.querySelector("#unity-warning");
+            function updateBannerVisibility() {
+                warningBanner.style.display = warningBanner.children.length ? 'block' : 'none';
             }
-
-            var buildUrl = "Build";
-            var loaderUrl = buildUrl + "/Build.loader.js";
-            var config = {
-                arguments: [],
-                dataUrl: buildUrl + "/Build.data",
-                frameworkUrl: buildUrl + "/Build.framework.js",
-                codeUrl: buildUrl + "/Build.wasm",
-                streamingAssetsUrl: "StreamingAssets",
-                companyName: "DefaultCompany",
-                productName: "fly-simulator-pvp",
-                productVersion: "0.1",
-                showBanner: unityShowBanner,
-            };
-
-            // By default, Unity keeps WebGL canvas render target size matched with
-            // the DOM size of the canvas element (scaled by window.devicePixelRatio)
-            // Set this to false if you want to decouple this synchronization from
-            // happening inside the engine, and you would instead like to size up
-            // the canvas DOM size and WebGL render target sizes yourself.
-            // config.matchWebGLToCanvasSize = false;
-
-            // If you would like all file writes inside Unity Application.persistentDataPath
-            // directory to automatically persist so that the contents are remembered when
-            // the user revisits the site the next time, uncomment the following line:
-            // config.autoSyncPersistentDataPath = true;
-            // This autosyncing is currently not the default behavior to avoid regressing
-            // existing user projects that might rely on the earlier manual
-            // JS_FileSystem_Sync() behavior, but in future Unity version, this will be
-            // expected to change.
-
-            if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
-                // Mobile device style: fill the whole browser client area with the game canvas:
-
-                var meta = document.createElement('meta');
-                meta.name = 'viewport';
-                meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
-                document.getElementsByTagName('head')[0].appendChild(meta);
-                document.querySelector("#unity-container").className = "unity-mobile";
-                canvas.className = "unity-mobile";
-
-                // To lower canvas resolution on mobile devices to gain some
-                // performance, uncomment the following line:
-                // config.devicePixelRatio = 1;
-
-
-            } else {
-                // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
-                canvas.style.width = "960px";
-                canvas.style.height = "600px";
+            var div = document.createElement('div');
+            div.innerHTML = msg;
+            warningBanner.appendChild(div);
+            if (type == 'error') div.style = 'background: red; padding: 10px;';
+            else {
+                if (type == 'warning') div.style = 'background: yellow; padding: 10px;';
+                setTimeout(function () {
+                    warningBanner.removeChild(div);
+                    updateBannerVisibility();
+                }, 5000);
             }
+            updateBannerVisibility();
+        }
 
-            document.querySelector("#unity-loading-bar").style.display = "block";
+        var buildUrl = "Build";
+        var loaderUrl = buildUrl + "/Build.loader.js";
+        var config = {
+            arguments: [],
+            dataUrl: buildUrl + "/Build.data",
+            frameworkUrl: buildUrl + "/Build.framework.js",
+            codeUrl: buildUrl + "/Build.wasm",
+            streamingAssetsUrl: "StreamingAssets",
+            companyName: "DefaultCompany",
+            productName: "fly-simulator-pvp",
+            productVersion: "0.1",
+            showBanner: unityShowBanner,
+        };
 
-            var script = document.createElement("script");
-            script.src = loaderUrl;
-            script.onload = () => {
-                createUnityInstance(canvas, config, (progress) => {
-                    document.querySelector("#unity-progress-bar-full").style.width = 100 * progress + "%";
-                }).then((unityInstance) => {
-                    document.querySelector("#unity-loading-bar").style.display = "none";
-                    document.querySelector("#unity-fullscreen-button").onclick = () => {
-                        unityInstance.SetFullscreen(1);
-                    };
+        if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
+            var meta = document.createElement('meta');
+            meta.name = 'viewport';
+            meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
+            document.getElementsByTagName('head')[0].appendChild(meta);
+            document.querySelector("#unity-container").className = "unity-mobile";
+            canvas.className = "unity-mobile";
+        }
 
-                }).catch((message) => {
-                    alert(message);
-                });
-            };
+        document.querySelector("#unity-loading-bar").style.display = "block";
 
-            document.body.appendChild(script);
+        var script = document.createElement("script");
+        script.src = loaderUrl;
+        script.onload = () => {
+            createUnityInstance(canvas, config, (progress) => {
+                document.querySelector("#unity-progress-bar-full").style.width = 100 * progress + "%";
+            }).then((unityInstance) => {
+                document.querySelector("#unity-loading-bar").style.display = "none";
+                document.querySelector("#unity-fullscreen-button").onclick = () => {
+                    unityInstance.SetFullscreen(1);
+                };
+            }).catch((message) => {
+                alert(message);
+            });
+        };
 
-        </script>
+        document.body.appendChild(script);
+    </script>
 </body>
 </html>
