--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fly Simulator PVP - Jogo de Simulação de Voo</title>
+    <title>Fly Odyssey - Jogo de Simulação de Voo</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <style>
         * {
