Fix IOS 18 browsers

--- a/index.html
+++ b/index.html
@@ -152,12 +152,10 @@
         #unity-footer {
             position: relative;
             margin-top: 5px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
         }
 
         #unity-fullscreen-button {
+            float: right;
             width: 38px;
             height: 38px;
             background: url('TemplateData/fullscreen-button.png') no-repeat center;
@@ -165,6 +163,7 @@
         }
 
         #unity-build-title {
+            float: left;
             margin-right: 10px;
             line-height: 38px;
             font-family: arial;
@@ -195,7 +194,7 @@
 <body>
     <header>
         <div class="container">
-            <h1>Fly Simulator PVP</h1>
+            <h1>Fly Odyssey</h1>
             <p>Experimente o simulador de voo multijogador!</p>
         </div>
     </header>
@@ -219,8 +218,8 @@
                     </div>
                     <div id="unity-warning"></div>
                     <div id="unity-footer">
-                        <div id="unity-build-title">Fly Simulator PVP</div>
-                        <button id="unity-fullscreen-button" type="button" aria-label="Tela Cheia"></button>
+                        <div id="unity-fullscreen-button"></div>
+                        <div id="unity-build-title">Fly Odyssey</div>
                     </div>
                 </div>
             </div>
@@ -250,14 +249,12 @@
                 <a href="#">Política de privacidade</a>
                 <a href="#">Contato</a>
             </div>
-            <p>&copy; 2025 Fly Simulator PVP. Todos os direitos reservados.</p>
+            <p>&copy; 2025 Fly Odyssey. Todos os direitos reservados.</p>
         </div>
     </footer>
 
     <script>
         var canvas = document.querySelector("#unity-canvas");
-        var fullScreenButton = document.querySelector("#unity-fullscreen-button");
-        var unityInstance = null;
 
         function unityShowBanner(msg, type) {
             var warningBanner = document.querySelector("#unity-warning");
@@ -278,9 +275,6 @@
             updateBannerVisibility();
         }
 
-        // Verificar se estamos em um dispositivo iOS
-        var isiOS = /iPad|iPhone|iPod/.test(navigator.userAgent) && !window.MSStream;
-
         var buildUrl = "Build";
         var loaderUrl = buildUrl + "/Build.loader.js";
         var config = {
@@ -290,7 +284,7 @@
             codeUrl: buildUrl + "/Build.wasm",
             streamingAssetsUrl: "StreamingAssets",
             companyName: "DefaultCompany",
-            productName: "fly-simulator-pvp",
+            productName: "fly-odyssey",
             productVersion: "0.1",
             showBanner: unityShowBanner,
         };
@@ -311,32 +305,15 @@
         script.onload = () => {
             createUnityInstance(canvas, config, (progress) => {
                 document.querySelector("#unity-progress-bar-full").style.width = 100 * progress + "%";
-            }).then((instance) => {
-                unityInstance = instance;
+            }).then((unityInstance) => {
                 document.querySelector("#unity-loading-bar").style.display = "none";
-
-                // Configurar o manipulador de eventos para o botão de tela cheia
-                fullScreenButton.addEventListener("click", function () {
-                    if (isiOS) {
-                        // Solução específica para iOS que usa elementos de vídeo para acionar a tela cheia
-                        try {
-                            // Verificar se o Unity WebGL oferece uma API alternativa para iOS
-                            if (unityInstance.Module && typeof unityInstance.Module.SetFullscreen === "function") {
-                                unityInstance.Module.SetFullscreen(1);
-                            } else {
-                                // Informar ao usuário sobre a limitação no iOS
-                                alert("Modo tela cheia não disponível em iOS. Por favor, use a orientação paisagem para uma melhor experiência.");
-                            }
-                        } catch (e) {
-                            console.log("Erro ao tentar entrar em tela cheia no iOS:", e);
-                            alert("Não foi possível entrar em modo tela cheia neste dispositivo. Por favor, use a orientação paisagem para uma melhor experiência.");
-                        }
-                    } else {
-                        // Para outros navegadores, use a API padrão do Unity
+                document.querySelector("#unity-fullscreen-button").onclick = () => {
+                    if (unityInstance.SetFullscreen) {
                         unityInstance.SetFullscreen(1);
+                    } else {
+                        alert("Fullscreen mode is not supported on this device.");
                     }
-                });
-
+                };
             }).catch((message) => {
                 alert(message);
             });
